--- a/webapp/view/Index.view.xml
+++ b/webapp/view/Index.view.xml
@@ -14,7 +14,8 @@
 				class="utg-fiori-shell"
 				icon="img/favicon.png">
 				<u:headItems>
-					<u:ShellHeadItem tooltip="Configuration" icon="sap-icon://menu2" press="handlePressConfiguration"/>
+					<u:ShellHeadItem />
+					<u:ShellHeadItem tooltip="user" icon="img/avatar.png" press="onUserClick"/>
 				</u:headItems>
 			</u:Shell>
 		</headerContent>
