--- a/webapp/css/style.css
+++ b/webapp/css/style.css
@@ -5,38 +5,39 @@
     box-shadow: none;
 }
 
-.utg-fiori-hostPage .sapMPageHeader .sapMBarContainer.sapMBarRight,
-.utg-fiori-hostPage .sapMPageHeader .sapMBarContainer.sapMBarLeft {
-	height: 48px;
+.utg-fiori-hostPage .sapMPageHeader.sapMIBar {
+	height: 3rem;
 }
 
-
-/* Hide the first shell header item */
-.utg-fiori-hostPage .sapUiUfdShellHeadContainer .sapUiUfdShellHeadItm.sapUiUfdShellHeadItmSep:first-child > span {
-	display: none;
+.utg-fiori-hostPage .sapMPageHeader.sapMIBar .sapMBarRight {
+	height: 3rem;
 }
 
-/* Adjust the shell header item image size */
-.utg-fiori-hostPage .sapUiUfdShellHeadContainer .sapUiUfdShellHeadItm.sapUiUfdShellHeadItmSep > span > img {
-	margin: 0;
-	width: 35px;
-    height: 35px;
-}
-
-.utg-fiori-hostPage .sapUiUfdShellHeadContainer .sapUiUfdShellHeadItm.sapUiUfdShellHeadItmSep:hover > span {
-	background-color: transparent;
-}
-
-
-.utg-fiori-shell {
+.utg-fiori-toolbar {
 	position: absolute;
 	width: 100%;
-	height: 48px;
-	top: -48px;
+	height: 3rem;
+	top: -3rem;
+	padding: 0 2rem;
 	transition: all 0.8s;
 }
 
-.utg-fiori-shell.show {
+.utg-fiori-toolbar.show {
 	top: 0;
 	transition: all 0.5s;
+	height: 3rem;
+}
+
+.utg-fiori-toolbar-img {
+	height: 3rem;
+    width: 3rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.utg-fiori-toolbar-img img {
+	width: 40px;
+	height: 40px;
+	position: relative;
 }
