--- a/webapp/css/style.css
+++ b/webapp/css/style.css
@@ -5,19 +5,15 @@
     box-shadow: none;
 }
 
-.utg-fiori-hostPage .sapMPageHeader.sapMIBar {
-	height: 3rem;
-}
-
-.utg-fiori-hostPage .sapMPageHeader.sapMIBar .sapMBarRight {
-	height: 3rem;
+.utg-fiori-hostPage.sapMPageWithHeader > section {
+	top: 1.5rem;
 }
 
 .utg-fiori-toolbar {
 	position: absolute;
 	width: 100%;
-	height: 3rem;
-	top: -3rem;
+	height: 2.5rem;
+	top: -2.5rem;
 	padding: 0 2rem;
 	transition: all 0.8s;
 }
@@ -25,19 +21,47 @@
 .utg-fiori-toolbar.show {
 	top: 0;
 	transition: all 0.5s;
-	height: 3rem;
+	height: 2.5rem;
 }
 
 .utg-fiori-toolbar-img {
-	height: 3rem;
-    width: 3rem;
+	height: 2.5rem;
+    width: 2.5rem;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
 .utg-fiori-toolbar-img img {
-	width: 40px;
-	height: 40px;
+	width: 30px;
+	height: 30px;
 	position: relative;
+}
+
+/*********************************************/
+/************** Launchpad Areas **************/
+/*********************************************/
+
+.utg-fiori-launchpad-container {
+	height: calc(100% - 1rem);
+}
+
+.utg-fiori-launchpad-wrapper {
+	margin-top: 1rem;
+	height: 100%;
+}
+
+.utg-fiori-launchpad-meArea {
+	background-color: red;
+	height: 100%;
+}
+
+.utg-fiori-launchpad-main {
+	background-color: yellow;
+	height: 100%;
+}
+
+.utg-fiori-launchpad-notiCenter {
+	background-color: azure;
+	height: 100%;
 }
