--- a/webapp/view/Launchpad.view.xml
+++ b/webapp/view/Launchpad.view.xml
@@ -60,12 +60,57 @@
 								class="utg-fiori-launchpad-main-objectPageLayout"
 								enableLazyLoading="false">
 								<uxap:sections>
+									<!--My Home Group-->
 									<uxap:ObjectPageSection title="My Home">
 										<uxap:subSections>
 											<uxap:ObjectPageSubSection class="utg-fiori-launchpad-main-subSection">
 												<uxap:blocks>
-													<html:div>
-														<GenericTile class="sapUiTinyMarginBegin sapUiTinyMarginTop tileLayout" header="Status Loaded - no press event"
+													<html:div class="utg-fiori-launchpad-main-tileContainer">
+														<!--Introduction-->
+														<GenericTile class="sapUiTinyMarginBegin sapUiTinyMarginTop utg-fiori-launchpad-tileLayout" header="Introduction"
+															subheader="Fiori front-end programming" frameType="OneByOne">
+															<tileContent>
+																<TileContent>
+																	<content>
+																		<ImageContent src="sap-icon://education"/>
+																	</content>
+																</TileContent>
+															</tileContent>
+														</GenericTile>
+														<!--Firori History and Evolution-->
+														<GenericTile class="sapUiTinyMarginBegin sapUiTinyMarginTop utg-fiori-launchpad-tileLayout" header="History"
+															subheader="Subheader" frameType="OneByOne" press="press">
+															<tileContent>
+																<TileContent>
+																	<content>
+																		<ImageContent src="sap-icon://sap-box"/>
+																	</content>
+																</TileContent>
+															</tileContent>
+														</GenericTile>
+														<!--UI5-->
+														<GenericTile class="sapUiTinyMarginBegin sapUiTinyMarginTop utg-fiori-launchpad-tileLayout" header="SAP UI5"
+															subheader="Enterprise-ready web applications" frameType="OneByOne">
+															<tileContent>
+																<TileContent unit="Version" footer="1.42">
+																	<content>
+																		<ImageContent src="sap-icon://sap-ui5"/>
+																	</content>
+																</TileContent>
+															</tileContent>
+														</GenericTile>
+													</html:div>
+												</uxap:blocks>
+											</uxap:ObjectPageSubSection>
+										</uxap:subSections>
+									</uxap:ObjectPageSection>
+									<!--Work Space Group-->
+									<uxap:ObjectPageSection title="Work Space">
+										<uxap:subSections>
+											<uxap:ObjectPageSubSection class="utg-fiori-launchpad-main-subSection">
+												<uxap:blocks>
+													<html:div class="utg-fiori-launchpad-main-tileContainer">
+														<GenericTile class="sapUiTinyMarginBegin sapUiTinyMarginTop utg-fiori-launchpad-tileLayout" header="Status Loaded - no press event"
 															subheader="Subheader" frameType="OneByOne">
 															<tileContent>
 																<TileContent unit="Unit" footer="Footer">
@@ -75,7 +120,7 @@
 																</TileContent>
 															</tileContent>
 														</GenericTile>
-														<GenericTile class="sapUiTinyMarginBegin sapUiTinyMarginTop tileLayout" header="Status Loaded - with press event"
+														<GenericTile class="sapUiTinyMarginBegin sapUiTinyMarginTop utg-fiori-launchpad-tileLayout" header="Status Loaded - with press event"
 															subheader="Subheader" frameType="OneByOne" press="press">
 															<tileContent>
 																<TileContent unit="Unit" footer="Footer">
@@ -85,7 +130,7 @@
 																</TileContent>
 															</tileContent>
 														</GenericTile>
-														<GenericTile class="sapUiTinyMarginBegin sapUiTinyMarginTop tileLayout" header="Status Loading - no press event"
+														<GenericTile class="sapUiTinyMarginBegin sapUiTinyMarginTop utg-fiori-launchpad-tileLayout" header="Status Loading - no press event"
 															subheader="Subheader" frameType="OneByOne" state="Loading">
 															<tileContent>
 																<TileContent unit="Unit" footer="Footer">
@@ -96,7 +141,7 @@
 																</TileContent>
 															</tileContent>
 														</GenericTile>
-														<GenericTile class="sapUiTinyMarginBegin sapUiTinyMarginTop tileLayout" header="Status Loading - with press event"
+														<GenericTile class="sapUiTinyMarginBegin sapUiTinyMarginTop utg-fiori-launchpad-tileLayout" header="Status Loading - with press event"
 															subheader="Subheader" frameType="OneByOne" state="Loading" press="press">
 															<tileContent>
 																<TileContent unit="Unit" footer="Footer">
@@ -107,7 +152,7 @@
 																</TileContent>
 															</tileContent>
 														</GenericTile>
-														<GenericTile class="sapUiTinyMarginBegin sapUiTinyMarginTop tileLayout" header="Status Failed - no press event"
+														<GenericTile class="sapUiTinyMarginBegin sapUiTinyMarginTop utg-fiori-launchpad-tileLayout" header="Status Failed - no press event"
 															subheader="Subheader" frameType="TwoByOne" state="Failed">
 															<tileContent>
 																<TileContent unit="Unit" footer="Footer">
@@ -120,7 +165,7 @@
 																</TileContent>
 															</tileContent>
 														</GenericTile>
-														<GenericTile class="sapUiTinyMarginBegin sapUiTinyMarginTop tileLayout" header="Status Failed - with press event"
+														<GenericTile class="sapUiTinyMarginBegin sapUiTinyMarginTop utg-fiori-launchpad-tileLayout" header="Status Failed - with press event"
 															subheader="Subheader" frameType="TwoByOne" state="Failed" press="press">
 															<tileContent>
 																<TileContent unit="Unit" footer="Footer">
@@ -133,7 +178,7 @@
 																</TileContent>
 															</tileContent>
 														</GenericTile>
-														<SlideTile class="sapUiTinyMarginBegin sapUiTinyMarginTop tileLayout">
+														<SlideTile class="sapUiTinyMarginBegin sapUiTinyMarginTop utg-fiori-launchpad-tileLayout">
 															<tiles>
 																<GenericTile
 																	backgroundImage="test-resources/sap/m/demokit/sample/GenericTileAsFeedTile/images/NewsImage1.png"
@@ -165,7 +210,7 @@
 																</GenericTile>
 															</tiles>
 														</SlideTile>
-														<GenericTile class="sapUiTinyMarginBegin sapUiTinyMarginTop tileLayout" header="Status Disabled"
+														<GenericTile class="sapUiTinyMarginBegin sapUiTinyMarginTop utg-fiori-launchpad-tileLayout" header="Status Disabled"
 															subheader="Subheader" frameType="OneByOne" state="Disabled">
 															<tileContent>
 																<TileContent footer="Footer" unit="Unit">
@@ -176,7 +221,7 @@
 																</TileContent>
 															</tileContent>
 														</GenericTile>
-														<GenericTile class="sapUiTinyMarginBegin sapUiTinyMarginTop tileLayout" header="Status Disabled - with press event"
+														<GenericTile class="sapUiTinyMarginBegin sapUiTinyMarginTop utg-fiori-launchpad-tileLayout" header="Status Disabled - with press event"
 															subheader="Subheader" frameType="OneByOne" state="Disabled" press="press">
 															<tileContent>
 																<TileContent footer="Footer" unit="Unit">
@@ -188,32 +233,139 @@
 															</tileContent>
 														</GenericTile>
 													</html:div>
-													
-													
-													
-													
-													
-													
 												</uxap:blocks>
 											</uxap:ObjectPageSubSection>
 										</uxap:subSections>
 									</uxap:ObjectPageSection>
-						 
-									<uxap:ObjectPageSection title="Work Space">
-										<uxap:subSections>
-											<uxap:ObjectPageSubSection class="utg-fiori-launchpad-main-subSection">
-												<uxap:blocks>
-													<Text text="Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr."/>
-												</uxap:blocks>
-											</uxap:ObjectPageSubSection>
-										</uxap:subSections>
-									</uxap:ObjectPageSection>
-						 
+									<!--Internal Sales Group-->
 									<uxap:ObjectPageSection title="Internal Sales">
 										<uxap:subSections>
 											<uxap:ObjectPageSubSection class="utg-fiori-launchpad-main-subSection">
 												<uxap:blocks>
-													<Text text="Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr."/>
+													<html:div class="utg-fiori-launchpad-main-tileContainer">
+														<GenericTile class="sapUiTinyMarginBegin sapUiTinyMarginTop utg-fiori-launchpad-tileLayout" header="Status Loaded - no press event"
+															subheader="Subheader" frameType="OneByOne">
+															<tileContent>
+																<TileContent unit="Unit" footer="Footer">
+																	<content>
+																		<ImageContent src="sap-icon://line-charts"/>
+																	</content>
+																</TileContent>
+															</tileContent>
+														</GenericTile>
+														<GenericTile class="sapUiTinyMarginBegin sapUiTinyMarginTop utg-fiori-launchpad-tileLayout" header="Status Loaded - with press event"
+															subheader="Subheader" frameType="OneByOne" press="press">
+															<tileContent>
+																<TileContent unit="Unit" footer="Footer">
+																	<content>
+																		<ImageContent src="sap-icon://home-share"/>
+																	</content>
+																</TileContent>
+															</tileContent>
+														</GenericTile>
+														<GenericTile class="sapUiTinyMarginBegin sapUiTinyMarginTop utg-fiori-launchpad-tileLayout" header="Status Loading - no press event"
+															subheader="Subheader" frameType="OneByOne" state="Loading">
+															<tileContent>
+																<TileContent unit="Unit" footer="Footer">
+																	<content>
+																		<NumericContent scale="M" value="2.1"
+																			valueColor="Good" indicator="Up" />
+																	</content>
+																</TileContent>
+															</tileContent>
+														</GenericTile>
+														<GenericTile class="sapUiTinyMarginBegin sapUiTinyMarginTop utg-fiori-launchpad-tileLayout" header="Status Loading - with press event"
+															subheader="Subheader" frameType="OneByOne" state="Loading" press="press">
+															<tileContent>
+																<TileContent unit="Unit" footer="Footer">
+																	<content>
+																		<NumericContent scale="M" value="1.96"
+																			valueColor="Error" indicator="Down" />
+																	</content>
+																</TileContent>
+															</tileContent>
+														</GenericTile>
+														<GenericTile class="sapUiTinyMarginBegin sapUiTinyMarginTop utg-fiori-launchpad-tileLayout" header="Status Failed - no press event"
+															subheader="Subheader" frameType="TwoByOne" state="Failed">
+															<tileContent>
+																<TileContent unit="Unit" footer="Footer">
+																	<content>
+																		<FeedContent
+																			contentText="@@notify Great outcome of the Presentation today. The new functionality and the design was well received. Berlin, Tokyo, Rome, Budapest, New York, Munich, London"
+																			subheader="Subheader" value="9">
+																		</FeedContent>
+																	</content>
+																</TileContent>
+															</tileContent>
+														</GenericTile>
+														<GenericTile class="sapUiTinyMarginBegin sapUiTinyMarginTop utg-fiori-launchpad-tileLayout" header="Status Failed - with press event"
+															subheader="Subheader" frameType="TwoByOne" state="Failed" press="press">
+															<tileContent>
+																<TileContent unit="Unit" footer="Footer">
+																	<content>
+																		<FeedContent
+																			contentText="@@notify Great outcome of the Presentation today. The new functionality and the design was well received. Berlin, Tokyo, Rome, Budapest, New York, Munich, London"
+																			subheader="Subheader" value="9">
+																		</FeedContent>
+																	</content>
+																</TileContent>
+															</tileContent>
+														</GenericTile>
+														<SlideTile class="sapUiTinyMarginBegin sapUiTinyMarginTop utg-fiori-launchpad-tileLayout">
+															<tiles>
+																<GenericTile
+																	backgroundImage="test-resources/sap/m/demokit/sample/GenericTileAsFeedTile/images/NewsImage1.png"
+																	frameType="TwoByOne" state="Loading">
+																	<tileContent>
+																		<TileContent unit="Unit" footer="Footer">
+																			<content>
+																				<NewsContent
+																					contentText="Status Loading"
+																					subheader="Subheader">
+																				</NewsContent>
+																			</content>
+																		</TileContent>
+																	</tileContent>
+																</GenericTile>
+																<GenericTile
+																	backgroundImage="test-resources/sap/m/demokit/sample/GenericTileAsFeedTile/images/NewsImage2.png"
+																	frameType="TwoByOne" state="Loaded" press="press">
+																	<tileContent>
+																		<TileContent unit="Unit" footer="Footer">
+																			<content>
+																				<NewsContent
+																					contentText="Status Loaded"
+																					subheader="Subheader">
+																				</NewsContent>
+																			</content>
+																		</TileContent>
+																	</tileContent>
+																</GenericTile>
+															</tiles>
+														</SlideTile>
+														<GenericTile class="sapUiTinyMarginBegin sapUiTinyMarginTop utg-fiori-launchpad-tileLayout" header="Status Disabled"
+															subheader="Subheader" frameType="OneByOne" state="Disabled">
+															<tileContent>
+																<TileContent footer="Footer" unit="Unit">
+																	<content>
+																		<NumericContent value="3"
+																			icon="sap-icon://travel-expense" />
+																	</content>
+																</TileContent>
+															</tileContent>
+														</GenericTile>
+														<GenericTile class="sapUiTinyMarginBegin sapUiTinyMarginTop utg-fiori-launchpad-tileLayout" header="Status Disabled - with press event"
+															subheader="Subheader" frameType="OneByOne" state="Disabled" press="press">
+															<tileContent>
+																<TileContent footer="Footer" unit="Unit">
+																	<content>
+																		<NumericContent value="3"
+																			icon="sap-icon://travel-expense" />
+																	</content>
+																</TileContent>
+															</tileContent>
+														</GenericTile>
+													</html:div>
 												</uxap:blocks>
 											</uxap:ObjectPageSubSection>
 										</uxap:subSections>
