--- a/webapp/view/Index.view.xml
+++ b/webapp/view/Index.view.xml
@@ -1,6 +1,5 @@
 <mvc:View
 	controllerName="utegration.fiori.frontend.controller.Index"
-    class="sapUiSizeCompact"
 	xmlns:html="http://www.w3.org/1999/xhtml"
 	xmlns:core="sap.ui.core"
 	xmlns:mvc="sap.ui.core.mvc"
@@ -38,7 +37,7 @@
 			</OverflowToolbar>
 		</headerContent>
 		<content>
-			<App id="indexApp" />
+			<App id="indexApp" class="sapUiSizeCompact"/>
 		</content>
 	</Page>
 </mvc:View>
