--- a/webapp/view/Launchpad.view.xml
+++ b/webapp/view/Launchpad.view.xml
@@ -1,6 +1,7 @@
 <mvc:View
     controllerName="utegration.fiori.frontend.controller.Launchpad"
 	xmlns:html="http://www.w3.org/1999/xhtml"
+	xmlns:app="http://schemas.sap.com/sapui5/extension/sap.ui.core.CustomData/1"
 	xmlns:uxap="sap.uxap"
 	xmlns:core="sap.ui.core"
 	xmlns:mvc="sap.ui.core.mvc"
@@ -35,7 +36,7 @@
 										<html:div class="utg-fiori-launchpad-main-tileContainer">
 											<!--Introduction-->
 											<GenericTile class="sapUiTinyMarginBegin sapUiTinyMarginTop utg-fiori-launchpad-tileLayout" header="Introduction"
-												subheader="Fiori front-end programming" frameType="OneByOne">
+												subheader="Fiori front-end programming" frameType="OneByOne" app:tileName="topic-introduction" press="onLaunchpadTilePress">
 												<tileContent>
 													<TileContent>
 														<content>
@@ -46,7 +47,7 @@
 											</GenericTile>
 											<!--Firori History and Evolution-->
 											<GenericTile class="sapUiTinyMarginBegin sapUiTinyMarginTop utg-fiori-launchpad-tileLayout" header="History"
-												subheader="Subheader" frameType="OneByOne" press="press">
+												subheader="Subheader" frameType="OneByOne" app:tileName="topic-history" press="onLaunchpadTilePress">
 												<tileContent>
 													<TileContent>
 														<content>
@@ -57,7 +58,7 @@
 											</GenericTile>
 											<!--UI5-->
 											<GenericTile class="sapUiTinyMarginBegin sapUiTinyMarginTop utg-fiori-launchpad-tileLayout" header="SAP UI5"
-												subheader="Enterprise-ready web applications" frameType="OneByOne">
+												subheader="Enterprise-ready web applications" frameType="OneByOne" app:tileName="topic-ui5" press="onLaunchpadTilePress">
 												<tileContent>
 													<TileContent unit="Version" footer="1.42">
 														<content>
